--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/cadastro_cliente
     username: postgres
-    password: Leonardo16@
+    password: postgres
   jpa:
     hibernate:
       ddl-auto: update
@@ -19,4 +19,4 @@ management:
     web:
       exposure:
         include:
-          "*"
+          - prometheus
