--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/cadastro_cliente
+    url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
-    password: Leonardo16@
+    password: postgres
   jpa:
     hibernate:
       ddl-auto: update
