creating a restTemplate to get clients with orders

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=cadastroCliente
+
+
+order.service.url=http://localhost:8081/orders
+
+server.error.include-message=always
+server.error.include-exception=true
+
+#resilience4j.circuitbreaker.instances.resiliencia.minimum-number-of-calls=4
+#resilience4j.circuitbreaker.instances.resiliencia.sliding-window-size=8
